--- a/src/views/layouts/dashboard.ejs
+++ b/src/views/layouts/dashboard.ejs
@@ -41,8 +41,8 @@
             class="bg-orange-50 p-4 rounded-lg border-t-4 border-orange-500 text-center"
           >
             <i class="fas fa-fire text-orange-500"></i>
-            <div class="text-2xl font-bold">1,650</div>
-            <p class="text-gray-500 text-sm">of 2,000 calories</p>
+            <div class="text-2xl font-bold"> <%= goal[0].calorie_target %></div>
+            <p class="text-gray-500 text-sm"> <%= totalCalories[0].total %> </p>
             <div class="w-full h-2 bg-gray-200 rounded mt-2">
               <div class="h-2 bg-orange-500 rounded" style="width: 65%"></div>
             </div>
@@ -51,8 +51,8 @@
             class="bg-green-50 p-4 rounded-lg border-t-4 border-green-600 text-center"
           >
             <i class="fas fa-bread-slice text-green-600"></i>
-            <div class="text-2xl font-bold">185g</div>
-            <p class="text-gray-500 text-sm">of 230g carbs</p>
+            <div class="text-2xl font-bold"><%=all[0].totalCarbs %> </div>
+            <p class="text-gray-500 text-sm">of <%= goal[0].max_carbs %>g carbs</p>
             <div class="w-full h-2 bg-gray-200 rounded mt-2">
               <div class="h-2 bg-green-600 rounded" style="width: 80%"></div>
             </div>
@@ -61,8 +61,8 @@
             class="bg-yellow-50 p-4 rounded-lg border-t-4 border-yellow-500 text-center"
           >
             <i class="fas fa-dumbbell text-yellow-500"></i>
-            <div class="text-2xl font-bold">65g</div>
-            <p class="text-gray-500 text-sm">of 140g protein</p>
+            <div class="text-2xl font-bold"><%= all[0].totalProtein %> </div>
+            <p class="text-gray-500 text-sm">of <%= goal[0].min_proteins %>g protein</p>
             <div class="w-full h-2 bg-gray-200 rounded mt-2">
               <div class="h-2 bg-yellow-500 rounded" style="width: 45%"></div>
             </div>
@@ -71,8 +71,8 @@
             class="bg-purple-50 p-4 rounded-lg border-t-4 border-purple-600 text-center"
           >
             <i class="fas fa-oil-can text-purple-600"></i>
-            <div class="text-2xl font-bold">42g</div>
-            <p class="text-gray-500 text-sm">of 70g fats</p>
+            <div class="text-2xl font-bold"><%= all[0].totalFats %></div>
+            <p class="text-gray-500 text-sm">of <%= goal[0].max_sodium %>g soduim</p>
             <div class="w-full h-2 bg-gray-200 rounded mt-2">
               <div class="h-2 bg-purple-600 rounded" style="width: 60%"></div>
             </div>
